<resources>
    <string name="app_name">EcoLens</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="filter_all">All</string>
    <string name="filter_ewaste">E-Waste</string>
    <string name="filter_paper">Paper</string>
    <string name="filter_fabric">Fabric</string>
    <string name="filter_glass">Glass</string>
    <string name="welcome_username">Welcome username!</string>
    <string name="todo">TODO</string>
    <string name="total_carbon_footprint_saved">Total Carbon Footprint Saved</string>
    <string name="_0_00">0.00</string>
    <string name="kg_co_e">kg CO₂e</string>
    <string name="your_current_achievement">Your Current Achievement</string>
    <string name="logout">Logout</string>
    <string name="diary">Diary</string>
    <string name="loading">Loading...</string>
    <string name="_0_day_streak">🔥 0 Day Streak</string>
    <string name="go_back">Go Back</string>
    <string name="waste_encyclopedia">Waste Encyclopedia</string>
    <string name="search_item">Search item...</string>
    <string name="carbon_footprint_calculator">Carbon Footprint Calculator</string>
    <string name="carbon_footprint_saved">Carbon Footprint Saved</string>
    <string name="gross_total_saved_0_kg_co_e">Gross Total Saved: 0 kg CO₂e</string>
    <string name="plastic_kg">Plastic (kg)</string>
    <string name="paper_kg">Paper (kg)</string>
    <string name="aluminium_kg">Aluminium (kg)</string>
    <string name="glass_kg">Glass (kg)</string>
    <string name="organic_food_waste_kg">Organic Food Waste (kg)</string>
    <string name="footprint_icon">Footprint Icon</string>
    <string name="current_saved_0_kg_co_e">Current Saved: 0 kg CO₂e</string>
    <string name="ok">OK</string>
    <string name="search">Search</string>
    <string name="username">Username</string>
</resources>