<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    android:background="@color/bg_cream">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.App.LargeComponent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="#2E7D32"
            android:paddingTop="30dp">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/home_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:titleTextColor="@android:color/white" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="185dp"
                android:layout_height="44dp"
                android:layout_gravity="start|center_vertical"
                android:contentDescription="@string/todo"
                android:src="@drawable/ecolens_transparent_background" />

            <ImageButton
                android:id="@+id/profile_button"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_person"
                app:tint="@android:color/white" />

        </FrameLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/welcomeMsg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/denk_one"
        android:gravity="center"
        android:text="@string/welcome_username"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <androidx.cardview.widget.CardView
        android:id="@+id/carbon_footprint_card"
        android:layout_width="355dp"
        android:layout_height="157dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="@+id/welcomeMsg"
        app:layout_constraintStart_toStartOf="@+id/welcomeMsg"
        app:layout_constraintTop_toBottomOf="@+id/welcomeMsg">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/carbon_footprint_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/total_carbon_footprint_saved"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/carbon_footprint_value"
                android:layout_width="216dp"
                android:layout_height="88dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/frank_ruhl_libre_medium"
                android:text="@string/_00_00"
                android:textAlignment="center"
                android:textColor="?attr/colorPrimary"
                android:textSize="70sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/carbon_footprint_unit"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/carbon_footprint_title"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/carbon_footprint_unit"
                android:layout_width="115dp"
                android:layout_height="36dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/frank_ruhl_libre_medium"
                android:text="@string/kg_co_e"
                android:textAlignment="center"
                android:textColor="?attr/colorPrimary"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/carbon_footprint_title"
                app:layout_constraintVertical_bias="0.493" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/achievement_card"
        android:layout_width="355dp"
        android:layout_height="215dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="@+id/carbon_footprint_card"
        app:layout_constraintStart_toStartOf="@+id/carbon_footprint_card"
        app:layout_constraintTop_toBottomOf="@+id/carbon_footprint_card">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvAchievementTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/your_current_achievement"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.091" />

            <TextView
                android:id="@+id/tvStreak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_day_streak"
                android:textColor="#FF5722"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.857" />

            <ImageView
                android:id="@+id/imgTrophy"
                android:layout_width="54dp"
                android:layout_height="47dp"
                android:layout_marginStart="28dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_trophy"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAchievementTitle"
                app:layout_constraintVertical_bias="0.305" />

            <TextView
                android:id="@+id/tvTierName"
                android:layout_width="149dp"
                android:layout_height="31dp"
                android:layout_marginStart="4dp"
                android:text="@string/loading"
                android:textColor="@color/eco_green_primary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imgTrophy"
                app:layout_constraintStart_toEndOf="@+id/imgTrophy"
                app:layout_constraintTop_toTopOf="@+id/imgTrophy"
                app:layout_constraintVertical_bias="0.411" />

            <Button
                android:id="@+id/btnDiary"
                android:layout_width="92dp"
                android:layout_height="54dp"
                android:layout_marginEnd="15dp"
                android:text="@string/diary"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.888"
                app:layout_constraintStart_toEndOf="@+id/tvTierName"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.472" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>